--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <button id="create-slider" class="btn btn-primary px-5">Create slider</button>
       </div>
 <!--start selectedimage and totalimage showing section -->
-      <div id="imageSelect" >
-        <h1 class="text-center" style="font-size:30px;color:#007BFF;">Total Number of <span id="selectedImage"></span> Selected Images Out Of <span id="totalImage"></span> </h1> 
+      <div id="imageSelect" class="mt-4 mb-5 shadow-lg"  >
+        <h1 class="text-center" style="font-size:30px">Total Number of <span id="selectedImage"></span> Selected Images Out Of <span id="totalImage"></span> </h1> 
       </div>
 <!--end selectedimage and totalimage showing section -->
       <div class="row gallery">
